Bug Fixes + kleine Anpassungen

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.craftingit</groupId>
     <artifactId>unZipper</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -11,9 +11,23 @@
     </properties>
 
     <issueManagement>
-        <system>github</system>
-        <url>https://github.com/users/jokoumo/projects/1</url>
+        <system>GitHub</system>
+        <url>https://github.com/jokoumo/unZipper/issues</url>
     </issueManagement>
+
+    <contributors>
+        <contributor>
+            <name>André Kripppendorf</name>
+            <email>andre.krippendorf@crafting-it.de</email>
+            <url>https://github.com/jokoumo</url>
+            <organization>CraftingIT GmbH</organization>
+            <organizationUrl>https://crafting-it.de</organizationUrl>
+            <roles>
+                <role>Programer</role>
+            </roles>
+            <timezone>Europe/Berlin</timezone>
+        </contributor>
+    </contributors>
 
     <scm>
         <url>git@github.com:jokoumo/unZipper.git</url>
@@ -32,16 +46,6 @@
             <artifactId>javafx-fxml</artifactId>
             <version>16</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-            <version>1.20</version>
-        </dependency>
-        <dependency>
-            <groupId>org.tukaani</groupId>
-            <artifactId>xz</artifactId>
-            <version>1.8</version>
-        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -50,15 +54,21 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <release>11</release>
+                    <release>16</release>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.4</version>
+                <version>0.0.5</version>
                 <configuration>
                     <mainClass>de.craftingit.App</mainClass>
+                    <launcher>unZipper</launcher>
+                    <compress>2</compress>
+                    <jlinkZipName>unZipper</jlinkZipName>
+                    <jlinkImageName>unZipper</jlinkImageName>
+                    <noManPages>true</noManPages>
+                    <noHeaderFiles>true</noHeaderFiles>
                 </configuration>
             </plugin>
         </plugins>
