--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.craftingit</groupId>
     <artifactId>unZipper</artifactId>
@@ -36,6 +36,7 @@
     </scm>
 
     <dependencies>
+        <!-- OpenJFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -46,7 +47,10 @@
             <artifactId>javafx-fxml</artifactId>
             <version>16</version>
         </dependency>
+
+        <!-- next -->
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -57,6 +61,8 @@
                     <release>16</release>
                 </configuration>
             </plugin>
+
+            <!-- OpenJFX -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -71,6 +77,8 @@
                     <noHeaderFiles>true</noHeaderFiles>
                 </configuration>
             </plugin>
+
+            <!-- next -->
         </plugins>
     </build>
 </project>
